[B]1.1.1[/B]
- Fixed bug with domoticz_frontend switched off
- Fixed bug on restarting bdaserver when restarting/ shutting down Domotion
- Added mute log setting for sensors, actuators and timers to prevent ecessive logging for devices that update frequently

[B]1.1.0[/B]
- Added possibility to use apps 
- Updated hwurl to app format 
- Added DomoAppsStarter to domotion
- Updated settings
- Implemented socket basic device access for accessing devices running in apps
- Implemented service to automatically start local apps during startup
- Updated installer

[B]1.0.5[/B]
- Changed basicwebaccess format for holidays to dict
- Fixed bug in updating type for holidays in basicwebaccess
- Fixed bug in updating holiday instead of adding in basicwebaccess
- Changed tag name to holidays in basicwebaccess instead of holiday
- Fixed bug in RetainerMove

[B]1.0.4[/B]
- Fixed bug in reading table columns from db, may confuse people when using basicwebaccess
- Changed log data to JSON array format
- Switched basicwebaccess getinfo and getall for logging

[B]1.0.3[/B]
- Fixed bug in request_loader basic authorization (IsPassword function)
- Pass through authorization in header in apache
- Added getinfo in basicwebaccess for holidays
- Changed Param parameter from getinfo to INFO

[B]1.0.2[/B]
- Edit date format in web interface
- Extended basicwebaccess with timers
- Extended basicwebaccess with 'all' information (including holidays)
- Extended basicwebaccess with device info
- Added timerrecalc to basicwebaccess
- Added status led on basicwebaccess
- Added log to basicwebaccess
- Updated memorylog to be able to get multiple read positions for logging (one read position for each webserver and one for basicwebaccess)
- Fixed logline scroller in web-interface with no new logline (need to refresh javascript, ctrl+F5 in chrome)
- Fixed bug on callbacks to engine
- Moved deleting of old holidays to Domotion instead of webserver

[B]1.0.1[/B]