@@ -1,3 +1,6 @@
+[B]1.1.2[/B]
+- Fixed bug on hw_url on seeing value 0 as get request
+
 [B]1.1.1[/B]
 - Fixed bug with domoticz_frontend switched off
 - Fixed bug on restarting bdaserver when restarting/ shutting down Domotion
